--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <!--
   Material Design Lite
   Copyright 2015 Google Inc. All rights reserved.
@@ -165,7 +165,7 @@
     <div class="mdl-layout__tab-panel" id="bibliografia">
           <section class="section--center mdl-grid mdl-grid--no-spacing">
             <div class="mdl-cell mdl-cell--12-col">
-              <h4>Bibliografias</h4>
+              <h4>Bibliografia</h4>
               <ul class="toc">
                 <a href="#biblio1">Software-Defined Networking: A Comprehensive Survey.</a>
                 <a href="#biblio2">Lorem ipsum</a>
@@ -175,7 +175,7 @@
               </ul>
 
               <p id="#biblio1">
-              <!-- exemplo apagar depois aaaa-->
+              <!-- exemplo apagar depois -->
               [1] Diego Kreutz et al; Software-Defined Networking: A Comprehensive Survey.
               </p>
               <p id="#biblioImagens">
