--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         </div>
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
           <a href="#introducao" class="mdl-layout__tab is-active">Introdução</a>
-          <a href="#conceito" class="mdl-layout__tab">Conceito</a>
-          <a href="#aplicacao" class="mdl-layout__tab">Aplicações</a>
-          <a href="#classificacao" class="mdl-layout__tab">Classificações</a>
-           <a href="#tecnicas" class="mdl-layout__tab">Principais Técnicas</a>
+          <a href="#tipos" class="mdl-layout__tab">Tipos de varredura</a>
+          <a href="#nmap" class="mdl-layout__tab">NMap</a>
+          <a href="#zmap" class="mdl-layout__tab">ZMap</a>
+           <a href="#comparacoes" class="mdl-layout__tab">Comparações</a>
           <a href="#conclusao" class="mdl-layout__tab">Conclusão</a>
            <a href="#bibliografia" class="mdl-layout__tab">Bibliografia</a>
         </div>
@@ -185,6 +185,55 @@
             </div>
           </section>
     </div>
+
+    <div class="mdl-layout__tab-panel" id="zmap">
+          <section class="section--center mdl-grid mdl-grid--no-spacing">
+            <div class="mdl-cell mdl-cell--12-col">
+              <h4><i>Modus operandi</i></h4>
+                    <p align = "justify">O ZMap é o varredor de porta usado para varreduras massivas em todo o espaço IPv4 da rede, almejando a uma porta comum entre todos os hosts varridos e realizando seu objetivo em altíssima velocidade. Esse varredor envia tantos pacotes quanto a NIC e a CPU do destino aguentam. Assim como o Nmap, o Zmap envia pacotes através de “raw socket” (socket que permite o envio e recebimento de pacotes sem o uso específico de algum protocolo de transporte) diretamente na camada Ethernet. Desta maneira, o Zmap impede que o Sistema Operacional realize tarefas de rotina sobre os pacotes. Como tecnicamente não é estabelecida uma conexão TCP, assim que o host fonte receber TCP SYN-ACK, a resposta de TCP RST será enviada. Na sua forma básica, esse varredor suporta TPC SYN, ICMP e UDP scans.
+                    </p>
+                    <p align = "justify">
+                     O Zmap foi feito para realizar scans de toda Internet (IPv4), mas suporta a exclusão de endereços (<i>blacklisting</i>>) das suas varreduras para melhora de performance (endereços da IANA) e outros por pedidos de administradores dos alvos. Quanto aos hosts "disponíveis" para scan, o módulo de recebimento do Zmap precisa saber se o tráfico de pacotes recebido é proveniente de respostas ao scans, ou faz parte de algum tráfico de fundo da fonte. Para que isso ocorra, campos dos pacotes enviados são preenchidos com dados que sejam replicados nos pacotes de resposta. Para cada host varrido, Zmap computa o MAC (Media Access Control) do host de destino nos campos de Número de Sequência e porta de destino (para TCP) e Número de Sequência e identificador ICMP (para ICMP).
+                    </p>
+               <h4>Limitações</h4>
+                    <p align = "justify">Apesar de conseguir fazer varreduras rápidas no espaço IPv4, Zmap ainda não é rápido o bastante para fazer varreduras no espaço de endereços IPv6. Além disso, o Zmap também está limitado pela velocidade da internet do host de destino. Uma internet mais lenta do que a usada para testes [1] pode resultar em scans mais lentos, enquanto uma internet mais rápida pode acabar sobrecarregando redes e hosts.
+            </div>
+          </section>  
+               
+           <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+            <div  class="mdl-card mdl-cell mdl-cell--12-col">
+              <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing">
+                <h4 class="mdl-cell mdl-cell--12-col">Usos experimentados</h4>
+                <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                  <h4>Medições de adesão de protocolo</h4>
+                     <p align = "justify">
+                    Uma mesma porta deve ser varrida várias vezes ao longo de algum período de tempo, possibilitando, dessa forma, que seja identificado algum acréscimo no número de portas abertas. Caso isso aconteça, pode-se dizer que houve um aumento no protocolo usado naquela porta. Como por exemplo, pode-se configurar o Zmap para fazer varreduras constantes na porta 443, identificando possíveis variações no uso do protocolo HTTPS.
+                    </p>
+                </div>
+                <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                  <h4><i>Scanner</i> global de vulnerabilidades de alta velocidade</h4>
+                   <p align = "justify">
+                   Uma vulnerabilidade pode ser detectada em hosts no mundo inteiro num espaço curto de tempo. Possibilitando que usuários mal intencionados façam ataques com alta possibilidade de sucesso em portas executando aplicações vulneráveis. Exemplos de vulnerabilidade são o SQL Server operando na porta 1434 (já foi sujeito a buff overflow, possibilitando a execução de código malicioso) e aparelhos UPnP.
+                  </p>
+                </div>
+                <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                  <h4>Monitoramento da disponibilidade de serviço</h4>
+                   <p align = "justify">
+                   Estudos predecessores ao Zmap já previam que o uso do scan ICMP echo request poderiam detectar interrupções em massa da Internet. Durante o Furacão Sandy, que atingiu a costa oeste dos EUA em 2013, o Zmap foi usado para varrer a porta 443 (é usada para a comunicação com websites em geral) de todo o espaço do IPv4 a cada duas horas [1]. O observado foi que, nas localidades afetadas, houve uma queda de 30% na quantidade de portas abertas.
+                  </p>
+                </div>
+                <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                  <h4>Comunicação anônima</h4>
+                   <p align = "justify">
+                   Por causa da característica de enviar incontáveis pacotes para toda a rede IPv4, torna-se impossível de se rastrear qual era o real destinatário de um envio de mensagem objetivando o anonimato.
+                  </p>
+                </div>
+          </section>
+
+    </div>
+
+
+
         <footer class="mdl-mega-footer">
 
           <div class="mdl-mega-footer--bottom-section">
