--- a/index.html
+++ b/index.html
@@ -326,17 +326,19 @@
               <ul class="toc">
                 <a href="#biblio1">ZMap: Fast Internet-wide Scanning and Its Security Applicatons</a>
                 <a href="#biblio2">Software-Defined Networking: A Comprehensive Survey</a>
-                <a href="#biblio3">Lorem ipsum</a>
+                <a href="#biblio3">Computer Networking: A Top-Down Approach</a>
                 <a href="#biblio4">Lorem ipsum</a>
                 <a href="#biblioImagens">Imagens</a>
               </ul>
 
               <p id="#biblio1">
-              <!-- exemplo apagar depois -->
               [1] Z. Durumeric, E. Wustrow, J. Alex Halderman, Univesidade de Michigan. ZMap: Fast Internet-wide Scanning and Its Security Applicatons, Agosto 2013.
               </p>
               <p id="#biblio2">
               [2] Diego Kreutz et al; Software-Defined Networking: A Comprehensive Survey.
+              </p>
+              <p id="#biblio3">
+              [3] J. Kurose, K. Ross. Computer Networking: A Top-Down Approach.
               </p>
               <p id="#biblioImagens">
               <li>[1] Ícone Firewall disponibilizado por Madebyoliver</li>
